--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "componentes": "^0.0.10",
     "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
