--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
