--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "bootstrap": "^5.2.1",
     "componentes": "^0.0.10",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.1",
+    "malihu-custom-scrollbar-plugin": "^3.1.5",
     "mdb-react-ui-kit": "^4.2.0",
+    "mdb-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-sidebar-menu": "^2.0.3",
