--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
+    "react-simple-star-rating": "^4.0.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
