--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-notifications-menu": "^1.0.6",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
