intento fallido de avance

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "auth": "^0.0.9",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.1",
     "componentes": "^0.0.10",
@@ -26,6 +27,7 @@
     "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-jwt": "^1.1.7",
     "react-notifications-menu": "^1.0.6",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.4.1",
